# cinnamon-backgrounds

./: .gitignore  ChangeLog  Makefile.in  aclocal.m4  configure
backgrounds/: Makefile.am  Makefile.in
cinnamon-background-properties/: cinnamon-backgrounds.xml
debian/: changelog  cinnamon-backgrounds.install  control  control.in  copyright  rules  watch
